third_party/move/move-compiler-v2/tests/more-v1/parser/spec_parsing_inside_fun.exp

Diagnostics:
error: cannot use `()` with an operator which expects a value of type `integer`
   ┌─ tests/more-v1/parser/spec_parsing_inside_fun.move:32:9
   │
32 │         spec {} + 1;
   │         ^^^^^^^

error: cannot use `()` with an operator which expects a value of type `bool`
   ┌─ tests/more-v1/parser/spec_parsing_inside_fun.move:33:9
   │
33 │         spec {} && spec {};
   │         ^^^^^^^
